--- a/package.json
+++ b/package.json
@@ -1,22 +1,37 @@
 {
-  "name": "starter-express-api",
+  "name": "secure-rest-api-express-node",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple secure node application using JWT",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cyclic-software/starter-express-api.git"
+    "url": "git+https://github.com/cmuth001/Secure-REST-API-NodeJS.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "chandrasekhar reddy muthyala",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cyclic-software/starter-express-api/issues"
+    "url": "https://github.com/cmuth001/Secure-REST-API-NodeJS/issues"
   },
-  "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
+  "homepage": "https://github.com/cmuth001/Secure-REST-API-NodeJS#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.17.1",
+    "express-validator": "^6.14.2",
+    "generate-password": "^1.7.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^2.2.33",
+    "mongoose": "^5.6.5",
+    "mongoose-unique-validator": "^2.0.3",
+    "nodemailer": "^6.8.0",
+    "nodemailer-express-handlebars": "^6.0.0",
+    "nodemon": "^2.0.20",
+    "path": "^0.12.7"
   }
 }
